Fix 'ways to view the records covered in this guide' h3 spacing

--- a/css/base-sass.css
+++ b/css/base-sass.css
@@ -5744,4 +5744,10 @@ ul.tna-event-list > li {
   display: inline-block;
 }
 
+.toggle-heading {
+  font-family: "Open Sans", verdana, arial, sans-serif !important;
+  padding-left: 26px !important;
+  padding-right: 2px !important;
+}
+
 /*# sourceMappingURL=base-sass.css.map */
