--- a/css/sass/_rebrand.scss
+++ b/css/sass/_rebrand.scss
@@ -321,3 +321,9 @@ ul.tna-event-list>li {
   background-repeat: no-repeat;
   display: inline-block;
 }
+
+.toggle-heading {
+  font-family: $tna_font_open_sans !important;
+  padding-left: 26px !important;
+  padding-right: 2px !important;
+}
